--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/pnpm
+      - uses: wyvox/action-setup-pnpm@v2 
 
 
 
@@ -32,7 +32,7 @@ jobs:
     needs: [install_dependencies]
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/pnpm
+      - uses: wyvox/action-setup-pnpm@v2 
       - name: Lint
         run: pnpm lint
 
@@ -44,7 +44,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/pnpm
+      - uses: wyvox/action-setup-pnpm@v2 
       - uses: ./.github/actions/assert-build
 
 
@@ -63,7 +63,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/pnpm
+      - uses: wyvox/action-setup-pnpm@v2 
       - uses: ./.github/actions/download-built-package
       - name: 'Change TS to ${{ matrix.typescript-scenario }}'
         run: 'pnpm add --save-dev ${{ matrix.typescript-scenario}}'
@@ -83,7 +83,7 @@ jobs:
     needs: [build]
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/pnpm
+      - uses: wyvox/action-setup-pnpm@v2 
       - uses: ./.github/actions/download-built-package
       - run: pnpm --filter test-app test:ember
 
@@ -94,7 +94,7 @@ jobs:
     needs: [build]
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/pnpm
+      - uses: wyvox/action-setup-pnpm@v2 
       - name: Install Dependencies (without lockfile)
         run: rm pnpm-lock.yaml && pnpm install
       - uses: ./.github/actions/download-built-package
@@ -124,7 +124,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/actions/pnpm
+      - uses: wyvox/action-setup-pnpm@v2 
       - uses: ./.github/actions/download-built-package
       - name: Run Tests
         working-directory: ./test-app
@@ -150,7 +150,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           persist-credentials: false
-      - uses: ./.github/actions/pnpm
+      - uses: wyvox/action-setup-pnpm@v2 
       - run: pnpm build
       - name: Create Release Pull Request or Publish to npm
         id: changesets
